--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,8 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+  <img src="\images\cinema.jpg" alt="cinema">
+  <div class="title_div">
+    <h1 class="title">CINEMA
+      <br> IronHack</h1>
+    <a href="/movies"><button class="button">Check the movies!</button></a>
+  </div>
+</div>
